- moved all the updater code to the new and small XML metadata file produced by the CGI http://freepops.org/modules.php written by alessiofender
- added /etc/init.d openwrt scripts
- added flags for openwrt in configure.sh
- configure.sh variables can be partially overridden setting env variables
- better fmessage osx utility
31/03/2007 0.2.2
- updater.lua: fix @updater (gareuselesinge)
- tin.lua: removed obsolete code, attachement should now work (gareuselesinge)
- fixed freepops-updater-fltk (thanks blackmoon)
- changed CORE definition in updater-dialog (thanks taganaka)
- added googlemail domain (thanks beermatt)
- fixed manual (Thanks fgiunchedi for reporting the bug)
25/03/2007 0.2.1
- fixed fltk interactive updater
- es, fr: Added link to the Fedora package page (alessiofender)
- es, fr: Added distro icons (alessiofender)
- README.FPM.en.txt, README.FPM.it.txt, freepopsd.vbs: reorganization of buildfactory mess, now only the upstream supported builds arein the main Makefile. This Makefile includes at the end other Makefilesavailable in subdirs like gentoo/openbsd. All fils relative to distros are intheis relative directory, except the jail building script that should be movedin scripts. (gareuselesinge)
- hotmail.lua: Get msn working again. (russell822)
- hotmail.lua: Fix live mail not retreiving messages. (russell822)
- yahoo.lua: fixed wrong require and module declaration statement. yahoo should beworking now. (gareuselesinge)
- updater.lua: added local_path_old to plugin metadata: (gareuselesinge)
- hotmail.lua: Replace a string.find with string.match. (russell822)
- freepops.lua, updater.lua: updater now supports fetching all metadata in one step.better prettyprinting of tables in luay.c to ease debuggingfltk, lua and shell updater fixed to use all-in-one metadata fetching facility.configure.sh can now se the path for libexpat.a on osx (no more hardocded)config.h bumped to 0.2.1 (gareuselesinge)
- hotmail.lua: Fixed broken 0.1.6l (russell822)