@@ -1,3 +1,5 @@
+- integrated gentoo patch to fix gcrypt initialization: http://sources.gentoo.org/viewcvs.py/*checkout*/gentoo-x86/net-mail/freepops/files/freepops-0.2.2-gcrypt.patch; thanks Daniel Black for submitting the patch and Przemyslaw Wroblewski for reporting bug http://bugs.gentoo.org/show_bug.cgi?id=177682
+reporting the bug Przemyslaw Wroblewski 
 - moved all the updater code to the new and small XML metadata file produced by the CGI http://freepops.org/modules.php written by alessiofender
 - added /etc/init.d openwrt scripts
 - added flags for openwrt in configure.sh
